--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
     "mongoose": "^7.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
